# pico

./: .gitignore  CMakeLists-day24-ejolson.txt  CMakeLists.txt  day24-ejolson.c  day24-input.h  day24.c  main.py
aoc20d22/: CMakeLists.txt  aoc20d22.c  day22.c
aoc20d22-ejolson/: CMakeLists.txt  aoc20d22-ejolson.c
